# bank-feature-creation

./: .gitignore  completed.txt  config.yaml  pyproject.toml  requirements.txt
config/: table_config.yaml
lookup-lists/: BNPL_Lookup_List.csv  DSA_Lookup_List.csv  Delivery_Services_Lookup_List.csv  Gambling_Lookup_List.csv  P2P_Platform_Lookup_List.csv  Payday_Lookup_List.csv  Rideshare_Lookup_List.csv
src/bank-feature-creation/: generate_flags.py  parse_data.py  write_to_database.py
src/bank_feature_creation/: generate_flags.py  invoke_sagemaker.py  parse_data.py  write_to_database.py
